--- a/template/ts-node/function/package.json
+++ b/template/ts-node/function/package.json
@@ -4,7 +4,17 @@
   "description": "OpenFaaS Function",
   "main": "handler.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "tsc": "tsc",
+    "tsc:watch": "tsc -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "jest:update:snapshots": "tsc && jest --update-snapshots"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "4.5.2"
   },
   "keywords": [],
   "author": "OpenFaaS Ltd",
