--- a/template/ts-node/tsconfig.json
+++ b/template/ts-node/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
+    "lib": ["es2019", "es2017", "es7", "es6", "dom", "esnext.asynciterable"],
     "declaration": true,
     "rootDir": "./function",
     "outDir": "./function",
@@ -12,9 +13,8 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "sourceMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["node", "jest"]
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
