--- a/template/ts-node/package.json
+++ b/template/ts-node/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no tests specified\" && exit 0"
+    "test": "jest"
   },
   "keywords": [],
   "author": "OpenFaaS Ltd",
@@ -14,6 +14,10 @@
     "express": "^4.16.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22"
+    "@types/node": "^14.14.22",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "4.5.2"
   }
 }
