--- a/template/ts-node/function/package.json
+++ b/template/ts-node/function/package.json
@@ -10,6 +10,13 @@
     "test:watch": "jest --watch",
     "jest:update:snapshots": "tsc && jest --update-snapshots"
   },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "4.5.2"
+  },
   "keywords": [],
   "author": "OpenFaaS Ltd",
   "license": "MIT"
